# rust-js-bundler

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  jsconfig.json  justfile  package.json  pnpm-lock.yaml
crates/yab/: Cargo.toml
crates/yab-parser/: Cargo.toml
crates/yab-parser-macros/: Cargo.toml
crates/yab-parser-macros/src/: lib.rs
crates/yab-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  location.rs  number.rs  token.rs
crates/yab-parser/src/lexer/: code_iter.rs  comment.rs  escape_chars.rs  ident.rs  mod.rs  num.rs  operator.rs  punctuation.rs  regex.rs  string.rs  template.rs  token.rs  utils.rs
crates/yab/src/: main.rs  resolve.rs
example/src/: index.js  kiwi.js
js/example/: package.json
js/example/src/: bannana.js  index.js  kiwi.js
js/parser/: package.json  tsconfig.json  vitest.config.mjs
js/parser/src/: index.ts  keywords.ts  lexer.ts  parser.ts
js/parser/src/tests/: lexer.test.ts  parser.test.ts
js/proto/: README.md  package.json
js/proto/src/: index.js  parser.js
js/proto/src/tests/: parser.test.js
src/: cli.rs  main.rs
test/: lex_bench.sh  sanity_check.sh
